# Humanoid-Robot

robotic_arm/: CMakeLists.txt  package.xml
robotic_arm/msg/: CalibrationMessage.msg
robotic_arm/src/calibration_models/: motor_regressor.py
robotic_arm/src/calibration_models/dataset_calibration/: m3.csv
robotic_arm/src/cvzone_movements/: cvzone_model.py  tempCodeRunnerFile.py
